--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -5,12 +5,15 @@ CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01=y
 CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01="ipq-wifi-jdcloud_re-ss-01 -kmod-ath11k-pci zram-swap  luci-app-cupsd"
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02="ipq-wifi-jdcloud_re-cs-02 ath11k-firmware-qcn9074 kmod-ath11k-pci luci-app-athena-led luci-i18n-athena-led-zh-cn luci-app-cupsd"
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="-ath11k-firmware-ipq6018 -kmod-ath11k -kmod-ath11k-ahb -kmod-ath11k-pci luci-app-dockerman luci-i18n-dockerman-zh-cn  luci-app-cupsd"
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-wifi-redmi_ax5-jdcloud -kmod-ath11k-pci zram-swap"
+
+  
+#CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02=y
+#CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02="ipq-wifi-jdcloud_re-cs-02 ath11k-firmware-qcn9074 kmod-ath11k-pci luci-app-athena-led luci-i18n-athena-led-zh-cn luci-app-cupsd"
+#CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
+#CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="-ath11k-firmware-ipq6018 -kmod-ath11k -kmod-ath11k-ahb -kmod-ath11k-pci luci-app-dockerman luci-i18n-dockerman-zh-cn  luci-app-cupsd"
+#CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud=y
+#CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-wifi-redmi_ax5-jdcloud -kmod-ath11k-pci zram-swap"
+
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
@@ -23,13 +26,13 @@ CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 
 # Swap
-CONFIG_PACKAGE_zram-swap=m
+CONFIG_PACKAGE_zram-swap=y
 
 # Proto
-CONFIG_PACKAGE_proto-bonding=y
-# CONFIG_PACKAGE_luci-proto-quectel=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
-CONFIG_PACKAGE_luci-proto-relay=y
+CONFIG_PACKAGE_proto-bonding=n
+# CONFIG_PACKAGE_luci-proto-quectel=n
+CONFIG_PACKAGE_luci-proto-wireguard=n
+CONFIG_PACKAGE_luci-proto-relay=n
 
 # Kernel modules
 CONFIG_PACKAGE_kmod-fs-exfat=y
@@ -86,7 +89,6 @@ CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_usbmuxd=y
 CONFIG_PACKAGE_mii-tool=y
-CONFIG_PACKAGE_xl2tpd=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 #  Coremark
@@ -107,7 +109,7 @@ CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
 # Enable Luci App
-CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome=n
 CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-cupsd=m
@@ -115,10 +117,10 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-app-easytier=y
 CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-lucky=y
+CONFIG_PACKAGE_luci-app-lucky=n
 CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-quickfile=y
+CONFIG_PACKAGE_luci-app-quickfile=n
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
@@ -128,3 +130,59 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
+
+
+
+
+
+
+
+CONFIG_PACKAGE_luci-app-statistics=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+
+
+#new add
+CONFIG_PACKAGE_luci-app-nft-timecontrol=y
+CONFIG_PACKAGE_luci-app-watchdog=y
+CONFIG_PACKAGE_luci-app-ddnsto=y
+
+CONFIG_PACKAGE_rsyncd=y
+CONFIG_PACKAGE_rsync=y
+
+
+#bandix
+CONFIG_PACKAGE_luci-app-bandix=y
+CONFIG_PACKAGE_bandix=y
+#流量监控
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_wrtbwmon=y
+
+
+#micropyhton 
+CONFIG_PACKAGE_micropython-lib=y
+
+
+
+# Mwan3
+#CONFIG_PACKAGE_mwan3=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-#mwan3helper=y   #MWAN3分流助手
+
+#WOL 唤醒
+CONFIG_PACKAGE_luci-app-wolplus=y
+#CPU频率
+CONFIG_PACKAGE_luci-app-cpufreq=y
+
+#ram释放
+CONFIG_PACKAGE_luci-app-ramfree=y
+
+
+
+#CONFIG_PACKAGE_luci-app-filebrowser-go=y
+#文件管理
+CONFIG_PACKAGE_luci-app-filemanager=y
+
+#samba4
+CONFIG_PACKAGE_luci-app-samba4=y
