--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -126,7 +126,7 @@ CONFIG_PACKAGE_luci-app-istorex=y
 CONFIG_PACKAGE_luci-app-lucky=y
 CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-quickfile=y
+CONFIG_PACKAGE_luci-app-quickfile=n
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
@@ -136,3 +136,60 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
+
+
+
+
+
+
+
+
+CONFIG_PACKAGE_luci-app-statistics=y
+CONFIG_PACKAGE_luci-app-watchcat=y
+CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+
+
+#new add
+CONFIG_PACKAGE_luci-app-nft-timecontrol=y
+CONFIG_PACKAGE_luci-app-watchdog=y
+CONFIG_PACKAGE_luci-app-ddnsto=y
+
+CONFIG_PACKAGE_rsyncd=y
+CONFIG_PACKAGE_rsync=y
+
+
+#bandix
+CONFIG_PACKAGE_luci-app-bandix=y
+CONFIG_PACKAGE_bandix=y
+#流量监控
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_wrtbwmon=y
+
+
+#micropyhton 
+CONFIG_PACKAGE_micropython-lib=y
+
+
+
+# Mwan3
+#CONFIG_PACKAGE_mwan3=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-#mwan3helper=y   #MWAN3分流助手
+
+#WOL 唤醒
+CONFIG_PACKAGE_luci-app-wolplus=y
+#CPU频率
+CONFIG_PACKAGE_luci-app-cpufreq=y
+
+#ram释放
+CONFIG_PACKAGE_luci-app-ramfree=y
+
+
+
+#CONFIG_PACKAGE_luci-app-filebrowser-go=y
+#文件管理
+CONFIG_PACKAGE_luci-app-filemanager=y
+
+#samba4
+CONFIG_PACKAGE_luci-app-samba4=y
