--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -4,7 +4,7 @@ CONFIG_TARGET_qualcommax_ipq60xx=y
 CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01="ipq-wifi-jdcloud_re-ss-01 -kmod-ath11k-pci zram-swap  luci-app-cupsd"
+CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01="ipq-wifi-jdcloud_re-ss-01 -kmod-ath11k-pci zram-swap "
 
   
 #CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02=y
@@ -112,7 +112,7 @@ CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_luci-app-adguardhome=n
 CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-cupsd=m
+CONFIG_PACKAGE_luci-app-cupsd=n
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-app-easytier=y
@@ -130,7 +130,6 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=n
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
-
 
 
 
